Version history of the R genetic analysis package (R/gap)

Version 1.3
28-07-2022	Generate NAMESPACE by roxygen2
		Add qtlClassifier(), pedtodot_verbatim(), miamiplot2()/labelManhattan()
		Add circos.mhtplot2(); Clarification of YAML declaration in gap.Rmd
		Add cex.axis to axis(1) in mhtplot.trunc() & notes on adjustment data
		Drop Cox.est, Cox.T, Dev* for hwe.cc from NAMESPACE and export fbsize
		Drop (p) and add options to get qtl2plot(), qtl2plotly() and qtl3plotly().
		Mask circos.cnvplot due to excessive running time.
		Redocument grid2d, klem, metareg, mtdt, plot.hap.score, print.hap.score.
		Revise grid2d, qtl(2|3)dplt(ly)() so as to accommodate TSS.
		Suggests: DiagrammeR, DOT, manhattanly, readr

Version 1.2.3-6
10-05-2022	Switch back to three-character maintainer name.

Version 1.2.3-5
09-05-2022	Mask circos.mhtplot due to running time > 5s
		Merge first name

Version 1.2.3-4
09-05-2022	Drop URL for "Approximations for Mean and Variance of a Ratio" by Howard Seltman
		due to server certificate verification failure
		Drop DOI with Cai & Zeng (2004) for its unusual entry

Version 1.2.3-3
09-05-2022	Change cnvplot(cnv) to cnvplot(gap.datasets::cnv)
		Revise gap.Rmd to comply with csl.

Version 1.2.3-2
06-05-2022
gap.Rmd		Drop fig=TRUE from gap.Rnw since it causes problems
		Merge plogp.Rmd and functions.Rmd from pQTLtools
		Apply Sweave2knitr() to gap.Rnw and jss.Rnw and change gap.Rnw to gap.Rmd
		Add nature-genetics.csl from https://www.zotero.org/styles/nature-genetics with nocite
		Add the three functions related to linear regression
shinygap	Add inst/shinygap and therefore runshinygap
		Create R/global.R containing revised functions so it does not rely on R/gap
		Add split=FALSE to METAL_forestplot to accommodate individual plot(s).
		Make the first argument of sn() inside fbsize() as list() so as to handle vector input
R		R CMD build --compact-vignettes=gs+qpdf with ghostscript 9.56.1 suggested by Kurt Hornik