@@ -70,6 +70,7 @@ export(mhtplot2)
 export(mia)
 export(miamiplot)
 export(miamiplot2)
+export(mr_forestplot)
 export(mtdt)
 export(mtdt2)
 export(muvar)
